task file created

--- a/app/templates/usersprofile.html
+++ b/app/templates/usersprofile.html
@@ -12,6 +12,14 @@
     </p>
 
     </div>
+   {% if user != current_user %}
+                <p>
+                    <a href="{{ url_for('main.send_message',
+                                        recipient=user.username) }}">
+                        {{ _('Send private message') }}
+                    </a>
+                </p>
+                {% endif %}
 {% endfor %}
 
 
